--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "rtlcss-loader": "^1.0.3",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.15.1"
